--- a/assets/stylesheets/_header.scss
+++ b/assets/stylesheets/_header.scss
@@ -39,8 +39,7 @@ header + .row {
   nav {
     @media (max-width: $smallWidth) {
       display: inline-block;
-      width: 200px;
-      margin-top: 0;
+      margin-top: 10px;
     }
   }
 }
@@ -66,6 +65,11 @@ nav {
     margin-right: 7%;
     margin-left: 5%;
     text-decoration: none;
+
+    @media (max-width: $smallWidth) {
+      margin-right: 4%;
+      margin-left: 0;
+    }
 
     a {
       position: relative;
