--- a/assets/stylesheets/_media.scss
+++ b/assets/stylesheets/_media.scss
@@ -1,4 +1,4 @@
-@media (max-width: 768px) {
+@media (max-width: $smallWidth) {
   .project-thumb {
     text-align: left;
   }
